--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ dependencies:
 galaxy_info:
   author: northys
   description: Hunspell dictionaries for elasticsearch.
-  license: "MIT"
+  license: license (MIT)
   min_ansible_version: 2.0
   platforms:
   - name: Debian
